--- a/.github/workflows/luogu_auto_benben.yml
+++ b/.github/workflows/luogu_auto_benben.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: 下载Python文件
-        run: Invoke-WebRequest https://github.com/CodingOIer/Luogu-Auto/releases/download/Luogu-Auto-Punch/luogu_punch.py -OutFile luogu_auto_punch.py
+        run: Invoke-WebRequest https://github.com/CodingOIer/Luogu-Auto/releases/download/Luogu-Auto-Benben/luogu_benben.py -OutFile luogu_auto_benben.py
       - name: 安装库文件
         run: pip install requests
       - name: 运行发犇代码
-        run: python .\luogu_auto_punch.py $Env:COOKIE
+        run: python .\luogu_auto_benben.py $Env:COOKIE
         env:
           COOKIE: ${{ secrets.COOKIE }}
