--- a/.github/workflows/luogu_auto_punch.yml
+++ b/.github/workflows/luogu_auto_punch.yml
@@ -6,11 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  Luogu_Auto_Punch:
     runs-on: windows-latest
     steps:
-      - name: 下载Python文件
+      - name: 下载打卡Python文件
         run: Invoke-WebRequest https://github.com/CodingOIer/Luogu-Auto/releases/download/Luogu-Auto-Punch/luogu_punch.py -OutFile luogu_auto_punch.py
+      - name: 下载发送Email Python文件
              Invoke-WebRequest https://github.com/CodingOIer/Luogu-Auto/releases/download/Luogu-Auto-Punch-Email/luogu_punch_successfully_email.py -OutFile luogu_punch_successfully_email.py
       - name: 安装库文件
         run: pip install requests
