--- a/.github/workflows/luogu_auto_punch.yml
+++ b/.github/workflows/luogu_auto_punch.yml
@@ -20,7 +20,7 @@ jobs:
       #  env:
       #    COOKIE: ${{ secrets.COOKIE }}
       - name: 发送成功邮件
-        run: python .\luogu_punch_successfully_email.py $Env:KEY $Env:MY_EMAIL $Env:TO_MAIL
+        run: python .\luogu_punch_successfully_email.py $Env:KEY $Env:MY_EMAIL $Env:TO_EMAIL
         env:
           KEY: ${{ secrets.EMAIL_KEY }}
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
