--- a/.github/workflows/luogu_auto_punch.yml
+++ b/.github/workflows/luogu_auto_punch.yml
@@ -15,10 +15,10 @@ jobs:
         run: Invoke-WebRequest https://github.com/CodingOIer/Luogu-Auto/releases/download/Luogu-Auto-Punch-Email/luogu_punch_successfully_email.py -OutFile luogu_punch_successfully_email.py
       - name: 安装库文件
         run: pip install requests
-      #- name: 运行签到代码
-      #  run: python .\luogu_auto_punch.py $Env:COOKIE
-      #  env:
-      #    COOKIE: ${{ secrets.COOKIE }}
+      - name: 运行签到代码
+        run: python .\luogu_auto_punch.py $Env:COOKIE
+        env:
+          COOKIE: ${{ secrets.COOKIE }}
       - name: 发送成功邮件
         run: python .\luogu_punch_successfully_email.py $Env:KEY $Env:MY_EMAIL $Env:TO_EMAIL
         env:
